{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 143,
  "lineage": "87e710ae-13fd-8ee1-2c51-13f1ee5f3558",
  "resources": [
    {
      "module": "module.ec2_instances",
      "mode": "managed",
      "type": "aws_eip",
      "name": "web_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a959ee942108b309",
            "arn": "arn:aws:ec2:us-east-2:844446096818:elastic-ip/eipalloc-0a959ee942108b309",
            "association_id": "eipassoc-0366e606517c57f2d",
            "domain": "vpc",
            "id": "eipalloc-0a959ee942108b309",
            "instance": "i-0e9a51c49d33a9204",
            "network_border_group": "us-east-2",
            "network_interface": "eni-00938068fae7ab3e5",
            "private_dns": "ip-192-168-0-20.us-east-2.compute.internal",
            "private_ip": "192.168.0.20",
            "public_dns": "ec2-3-132-96-234.us-east-2.compute.amazonaws.com",
            "public_ip": "3.132.96.234",
            "public_ipv4_pool": "amazon",
            "region": "us-east-2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2_instances.aws_instance.web",
            "module.ec2_instances.aws_key_pair.this",
            "module.sg.aws_security_group.web_sg",
            "module.vpc.aws_subnet.terraform_subnet_1",
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-060988b0dff2faa7c",
            "arn": "arn:aws:ec2:us-east-2:844446096818:instance/i-0a90a94bdeb66ba7d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a90a94bdeb66ba7d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "cloudninja4-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0366473aa3dc27f85",
            "private_dns": "ip-192-168-0-88.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.0.88",
            "region": "us-east-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0adb5c7a3161b6d9e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f5064a9ea6feffae",
            "tags": {
              "Name": "terraform-rds"
            },
            "tags_all": {
              "Name": "terraform-rds"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08f43765b8f7ddd9e"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2_instances.aws_key_pair.this",
            "module.sg.aws_security_group.web_sg",
            "module.vpc.aws_subnet.terraform_subnet_1",
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-060988b0dff2faa7c",
            "arn": "arn:aws:ec2:us-east-2:844446096818:instance/i-0e9a51c49d33a9204",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e9a51c49d33a9204",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "cloudninja4-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00938068fae7ab3e5",
            "private_dns": "ip-192-168-0-20.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.0.20",
            "region": "us-east-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0be02368704cc7d8e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f5064a9ea6feffae",
            "tags": {
              "Name": "terraform_ec2_web"
            },
            "tags_all": {
              "Name": "terraform_ec2_web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08f43765b8f7ddd9e"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2_instances.aws_key_pair.this",
            "module.sg.aws_security_group.web_sg",
            "module.vpc.aws_subnet.terraform_subnet_1",
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:844446096818:security-group/sg-08f43765b8f7ddd9e",
            "description": "Security group allowing web traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08f43765b8f7ddd9e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS \u0026 HTTP",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS \u0026 HTTP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS \u0026 HTTP",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS \u0026 HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tfweb-allow-http-https",
            "name_prefix": "",
            "owner_id": "844446096818",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tfweb-allow-http-https"
            },
            "tags_all": {
              "Name": "tfweb-allow-http-https"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a309dbfc61be0c9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:844446096818:internet-gateway/igw-0c875fcb4f6fa59a8",
            "id": "igw-0c875fcb4f6fa59a8",
            "owner_id": "844446096818",
            "region": "us-east-2",
            "tags": {
              "Name": "terraform-igw"
            },
            "tags_all": {
              "Name": "terraform-igw"
            },
            "vpc_id": "vpc-01a309dbfc61be0c9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:844446096818:route-table/rtb-05b3c423ab0a66aa9",
            "id": "rtb-05b3c423ab0a66aa9",
            "owner_id": "844446096818",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c875fcb4f6fa59a8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-rt"
            },
            "tags_all": {
              "Name": "terraform-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a309dbfc61be0c9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform_rt_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08854d5ed33b5af27",
            "region": "us-east-2",
            "route_table_id": "rtb-05b3c423ab0a66aa9",
            "subnet_id": "subnet-0f5064a9ea6feffae"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.terraform_rt",
            "module.vpc.aws_subnet.terraform_subnet_1",
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform_rt_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-025e96c2421c19d07",
            "region": "us-east-2",
            "route_table_id": "rtb-05b3c423ab0a66aa9",
            "subnet_id": "subnet-0b3284009ff333ac3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.terraform_rt",
            "module.vpc.aws_subnet.terraform_subnet_2",
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:844446096818:subnet/subnet-0f5064a9ea6feffae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.0.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f5064a9ea6feffae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "844446096818",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "terraform_subnet-1"
            },
            "tags_all": {
              "Name": "terraform_subnet-1"
            },
            "vpc_id": "vpc-01a309dbfc61be0c9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:844446096818:subnet/subnet-0b3284009ff333ac3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.168.0.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b3284009ff333ac3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "844446096818",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "terraform_subnet-2"
            },
            "tags_all": {
              "Name": "terraform_subnet-2"
            },
            "vpc_id": "vpc-01a309dbfc61be0c9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:844446096818:vpc/vpc-01a309dbfc61be0c9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/24",
            "default_network_acl_id": "acl-0b2fd4863dafb3706",
            "default_route_table_id": "rtb-0e42de4afc6557f23",
            "default_security_group_id": "sg-0e0d4025dc8d89953",
            "dhcp_options_id": "dopt-01d08d6c8bc981788",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01a309dbfc61be0c9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e42de4afc6557f23",
            "owner_id": "844446096818",
            "region": "us-east-2",
            "tags": {
              "Name": "terraform_vpc"
            },
            "tags_all": {
              "Name": "terraform_vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}